# vkbind

./: .gitignore  CMakeLists.txt  README.md  vkbind.h
examples/: 01_Triangle.c
examples/01_Fundamentals/: 01_Fundamentals.c  01_Fundamentals.cpp  01_Fundamentals_VFS.c
examples/01_Triangle/: 01_Triangle.c  01_Triangle_VFS.c
examples/01_Triangle/resources/shaders/: 01_Triangle.glsl.frag  01_Triangle.glsl.vert
examples/02_Textures/: 02_Textures.c  02_Textures_VFS.c
examples/02_Textures/resources/shaders/: 02_Textures.glsl.frag  02_Textures.glsl.vert
resources/: README.md
source/: vkbind_build.cpp  vkbind_template.h
